# ManipulatorCollisionDetector

./: .gitignore  .gitmodules  README.md
src/collison_visualize/: CMakeLists.txt  package.xml
src/collison_visualize/include/: manipulator.hpp
src/collison_visualize/src/: main.cpp  manipulator.cpp
src/collison_visualize/stl/: obs_m.STL  obs_mm.STL
